# io-iii-runtime

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Copy of SESSION_STATE.md  Dockerfile  LICENSE  README.md  SESSION_RESUME.md  SESSION_STATE.md  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
ADR/: ADR-001-llm-runtime-control-plane-selection.md  ADR-002-model-routing-and-fallback-policy.md  ADR-003-telemetry-logging-and-retention-policy.md  ADR-004-cloud-provider-enablement-and-key-security.md  ADR-005-evaluation-and-regression-testing-policy.md  ADR-006-persona-binding-and-mode-governance.md  ADR-007-memory-persistence-and-drift-control.md  ADR-008-challenger-enforcement-layer.md  ADR-009-audit-gate-contract-v1.0.md  ADR-012-bounded-orchestration-layer-contract.md  ADR-013-deterministic-failure-semantics.md  ADR-014-bounded-runbook-layer-contract.md  ADR-015-runbook-traceability-and-metadata-correlation.md  ADR-016-cli-runbook-execution-surface.md  ADR-021-runtime-observability-optimisation.md  ADR-022-memory-architecture-contract.md  ADR-023-open-source-initialisation-contract.md  ADR-024-work-mode-steward-mode-contract.md  ADR-025-api-transport-adapter-contract.md  ADR-026-governed-content-release-gate.md  ADR-027-project-identity-rename-contract.md  ADR-028-provider-adapter-completion-cloud-opt-in.md  ADR-029-file-upload-input-surface-contract.md  ADR-030-cloud-llm-api-transport-adapter.md  ADR-030-openai-compatible-transport-endpoint.md  ADR-031-knowledge-extension-rag-architecture-boundary.md  ADR-032-container-deployment-surface-contract.md  ADR-033-context-assembly-extension-file-input-lane.md  README.md
examples/: 01_first_run.py  02_routing_explained.py  03_audit_gate.py  04_runbook.py  05_session_governance.py
history/: HIS-OVW-001-io-1-overview.md  README.md  (+2 more)
(+200 files in other folders)
