[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "io-iii"
version = "0.9.0"
description = "IO-III deterministic local LLM runtime (governance-first control-plane)."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Ceven Jupiter Knowles"}
]
keywords = ["llm", "runtime", "deterministic", "governance", "control-plane"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "PyYAML>=6.0",
  "fastapi>=0.100",
  "uvicorn>=0.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.8",
  "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["io_iii*"]

[tool.pytest.ini_options]
addopts = "-q --tb=short --strict-markers"
testpaths = ["tests", "io_iii/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
